--- a/網頁/ConvertPage/ConvertPageAll.m.css
+++ b/網頁/ConvertPage/ConvertPageAll.m.css
@@ -36,75 +36,160 @@ select{
 	overflow: hidden;
 }
 .myBtn {
- 		
-	margin-top: 4%; /* Place the button at the bottom of the page */
-	margin-left: 90%; /* Place the button 30px from the right */
-	width: 8%;
-	padding-bottom: 8%;
+  	
+  	position: fixed; /* Fixed/sticky position */
+  	margin-top: 2%; /* Place the button at the bottom of the page */
+  	margin-left: 95%; /* Place the button 30px from the right */
+  	z-index: 30; /* Make sure it does not overlap */
+	width: 3%;
+	padding-bottom: 3%;
 	border-radius: 50%;
- 	
+  	border: none; /* Remove borders */
+  	outline: none; /* Remove outline */
+  	background-color: #fff; /* Set a background color */
+	opacity: 0;
+  
+	transition: background-color 200ms,transform 1s; 
+	
+}
+
+.myBtn.open{
+	background-color: #f0a550;
+	transform: scale(120);
+	user-select: none;	
+	
+}
+
+
+
+.MenuContent{
+	z-index: 0;
+	position: fixed;
+	margin-left: 47%;
+	margin-top: 3%;
+	width: 40%;
+	padding-bottom: 30%;
+	text-align: right;
+	transition: 1s;
+	display: none
+}
+.MenuContent.open{
+	
+	display: block;
+}
+.MenuBtn{
+	
+	font-size: 7.2rem;
+	font-weight: bolder;
+	color: #CE7E24;
+	-webkit-text-size-adjust:none;
+	
+}
+.MenuBtn:hover{
+	color: #184557;
+	
+}
+
+.Ab{
+	font-size: 6rem;
 }
 .AllCross{
+	position: fixed;
+	z-index: 35;
+	width: 3%;
+	padding-bottom: 3%;
+	margin-left: 95%;
+	margin-top: 2%;
+	border-radius: 50%;
+	opacity: 0;
 	
-	width: 8%;
-	padding-bottom: 8%;
-	margin-left: 90%;
-	margin-top: 4%;
 }
-.Cross1{	
-	margin-top: 2.8%;
-	margin-left: 2%;
-	width: 4%;
-	padding-bottom: 0.5%;
-	
+.Cross1{
+	position: fixed;
+	z-index: 40;
+	margin-top: 0.9%;
+	margin-left: 0.5%;
+	width: 2%;
+	padding-bottom: 0.25%;
+	border-radius: 3px 3px 3px 3px;
+	background-color: #296177;
+	box-shadow: 0px 3px 6px #00000029;
+	transition: 0.5s; 
+
 }
 .Cross1.open{
-	margin-top: 3.8%;
+	margin-top: 1.4%;
 	transform: rotate(45deg);
 }
 .Cross2{
-		
-	margin-top: 3.8%;
-	margin-left: 2%;
-	width: 4%;
-	padding-bottom: 0.5%;
-	
+	position: fixed;	
+	margin-top: 1.4%;
+	margin-left: 0.5%;
+	width: 2%;
+	padding-bottom: 0.25%;
+	border-radius: 3px 3px 3px 3px;
+	background-color: #296177;
+	box-shadow: 0px 3px 6px #00000029;
+	transition: 0.5s; 
 }
 .Cross2.open{
 	opacity: 0;
 }
 .Cross3{
-	
-	margin-top: 4.8%;
-	margin-left: 2%;
-	width: 4%;
-	padding-bottom: 0.5%;
-	
+	position: fixed;	
+	margin-top: 1.9%;
+	margin-left: 0.5%;
+	width: 2%;
+	padding-bottom: 0.25%;
+	border-radius: 3px 3px 3px 3px;
+	background-color: #296177;
+	box-shadow: 0px 3px 6px #00000029;
+	transition: 0.5s; 
 }
 .Cross3.open{
-	margin-top: 3.8%;
+	margin-top: 1.4%;
 	transform: rotate(-45deg);
 }
-.MenuContent{
-	margin-top: 15%;
+
+.LoadingAnimate{
+	position: fixed;
+	z-index: 999;
+	top: 0%;
+	left: 0%;
+	width: 100%;
+	padding-bottom: 56%;
+	background-color: #fff;
+	
 }
-.MenuBtn{
-	font-size: 12rem;
-}
-.Ab{
-	font-size: 10rem;
+
+.loadingwrap {
+    width: 100%;
+    height: 100vh; 
+    position: relative;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
 }
 .l-earth{
 	position: absolute;
-	top: 40%;
-	width: 20%;
-	}
+	top: 30%;
+	width: 12.5%;
+}
 .l-word {
-	position: absolute;
-	top: 55%;
-	font-size: 28px;
-	letter-spacing: 12px;
+    position: absolute;
+    top: 62.5%;
+    font-size: 28px;
+    letter-spacing: 12px;
 	text-align: center;
+   
+}
+
+.CountTo100{
+	color: #000;
+	width: 500px;
+	height: 100px;
+	font-size: 32px;
 }
 
 .bar{
