--- a/網頁/ConvertPage/ConvertPageAll.m.css
+++ b/網頁/ConvertPage/ConvertPageAll.m.css
@@ -882,7 +882,7 @@ button{
 .Cart{
 	position: absolute;
 	z-index: 6;
-	margin-left: 10%;
+	margin-left: 5%;
 	margin-top: 80%;
 	width: 60%;
 	height: 25%;
@@ -1244,10 +1244,10 @@ td{
 }
 .Team{
 	position: absolute;
-	left: 33.33%;
-	top: 80%;
+	margin-left: 70%;
+	margin-top: 80%;
 	z-index: 2;
-	width: 66.66%;
+	width: 30%;
 	height: 20%;
 	font-size: 3rem;
 	color: #000;
