--- a/網頁/ConvertPage/ConvertPageAll.m.css
+++ b/網頁/ConvertPage/ConvertPageAll.m.css
@@ -1228,10 +1228,10 @@ td{
 .CalResult{
 	position: absolute;
 	z-index: 6;
-	margin-left: 43.75%;
-	margin-top: 30.5%;
-	width: 48.96%;
-	height: 37.04%;
+	margin-left: 70%;
+	margin-top: 80%;
+	width: 25%;
+	height: 25%;
 	background-color: #fff;
 	border-radius: 10px;
 	color: #000;
@@ -1244,10 +1244,10 @@ td{
 }
 .Team{
 	position: absolute;
-	margin-left: 70%;
-	margin-top: 80%;
+	left: 33.33%;
+	top: 80%;
 	z-index: 2;
-	width: 30%;
+	width: 66.66%;
 	height: 20%;
 	font-size: 3rem;
 	color: #000;
