--- a/網頁/ConvertPage/ConvertPageAll.m.css
+++ b/網頁/ConvertPage/ConvertPageAll.m.css
@@ -1225,21 +1225,23 @@ td{
 	background-size: 70%;
 	background-repeat: no-repeat;
 }
-.Team{
+.CalResult{
 	position: absolute;
-	left: 25%;
-	top: 80%;
-	z-index: 2;
-	width: 75%;
-	height: 20%;
-	font-size: 4rem;
+	z-index: 6;
+	margin-left: 43.75%;
+	margin-top: 30.5%;
+	width: 48.96%;
+	height: 37.04%;
+	background-color: #fff;
+	border-radius: 10px;
 	color: #000;
-	text-align: left;
+	font-size: 3.33rem;
 	display: flex;
 	align-items: center;
 	justify-content: center;
-}
+	line-height: 3.5;
 
+}
 .CalResultText{
 	position: absolute;
 	margin-left: -40%;
