--- a/網頁/ConvertPage/ConvertPageAll.m.css
+++ b/網頁/ConvertPage/ConvertPageAll.m.css
@@ -1225,6 +1225,20 @@ td{
 	background-size: 70%;
 	background-repeat: no-repeat;
 }
+.Team{
+	position: absolute;
+	left: 25%;
+	top: 80%;
+	z-index: 2;
+	width: 75%;
+	height: 20%;
+	font-size: 4rem;
+	color: #000;
+	text-align: left;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
 .CalResult{
 	position: absolute;
 	z-index: 6;
@@ -1242,6 +1256,7 @@ td{
 	line-height: 3.5;
 
 }
+
 .CalResultText{
 	position: absolute;
 	margin-left: -40%;
