--- a/網頁/ConvertPage/ConvertPageAll.m.css
+++ b/網頁/ConvertPage/ConvertPageAll.m.css
@@ -1286,7 +1286,7 @@ td{
 	margin-top: 0%;
 	width: 33.33%;
 	height: 100%;
-	background-color: #fff;
+	background-color: transparent;
 	border-radius: 10px;
 	color: #000;
 	font-size: 3.33rem;
