--- a/網頁/ConvertPage/ConvertPageAll.m.css
+++ b/網頁/ConvertPage/ConvertPageAll.m.css
@@ -895,13 +895,14 @@ button{
 table{
 	width: 100%;
 	height: 100%;
-	border: 2px solid black;
+	border: 0;
 	border-radius: 2.5%;
 	background-color: #fff;
 		
 }
 tr{
 	height: 25%;
+	
 }
 td{
 	width: 12.5%;
