--- a/網頁/ConvertPage/ConvertPageAll.m.css
+++ b/網頁/ConvertPage/ConvertPageAll.m.css
@@ -895,17 +895,20 @@ button{
 table{
 	width: 100%;
 	height: 100%;
-	border: 0;
 	border-radius: 2.5%;
-	background-color: #fff;
-		
+	background-color: #000;		
 }
 tr{
 	height: 25%;
+	background-color: #fff;
+	border-radius: 2.5%;
+	
+	
 	
 }
 td{
 	width: 12.5%;
+	background-color: #fff;
 }
 .Img{
 	margin-left: auto;
@@ -1225,12 +1228,13 @@ td{
 }
 .Team{
 	position: absolute;
-	left: 25%;
-	top: 77.5%;
+	left: 25.125%;
+	top: 75.25%;
 	z-index: 2;
-	width: 75%;
-	height: 20%;
+	width: 74.625%;
+	height: 24.125%;
 	font-size: 4.5rem;
+	background: #fff;
 	color: #000;
 	text-align: left;
 	display: flex;
