--- a/part5.css
+++ b/part5.css
@@ -94,7 +94,7 @@
 	font-size: 1.66rem;
 	magin-top: 25%;
 	margin-left: 2%;
-	text-align: left;
+	text-align: center;
 }
 .CO2cause{
 	position: absolute;
