--- a/part5.css
+++ b/part5.css
@@ -157,7 +157,7 @@
 	font-size: 3rem;
 	magin-top: 25%;
 	margin-left: 2%;
-	text-align: left;
+	text-align: center;
 }
 .CO2cause-Mobile{
 	position: absolute;
