--- a/part5.css
+++ b/part5.css
@@ -163,10 +163,7 @@
 	position: absolute;
 	margin-top: 20%;
 	font-size: 4.5rem;
-	margin-left: 12%;
-	width: 16%;
-	height: 5%;
-	text-align: left;
+	text-align: center;
 	letter-spacing: 0px;
 	color: #ACD3D2;
 	opacity: 1;
@@ -176,10 +173,7 @@
 	position: absolute;
 	margin-top: 5%;
 	font-size: 4.5rem;
-	margin-left: 60%;
-	width: 30%;
-	height: 5%;
-	text-align: left;
+	text-align: center;
 	letter-spacing: 0px;
 	color: #ACD3D2;
 	opacity: 1;
