--- a/網頁/WayPage/WayPageAll.m.css
+++ b/網頁/WayPage/WayPageAll.m.css
@@ -20,7 +20,7 @@ body{
     display: block;
     width: 100%;
     height: 100%;
-	background-color: #1d1d1d;
+	background-color: #FFF;
 
 }
 video{
