--- a/網頁/WayPage/WayPageAll.m.css
+++ b/網頁/WayPage/WayPageAll.m.css
@@ -578,12 +578,13 @@ button{
 }
 .Food.open{
 	margin-left: 0%;
-	margin-top: -42.5%;
+	margin-top: -210%;
 	width: 100%;
 	height: 5%;
-	font-size: 5.33rem;
+	font-size: 8rem;
 	color: #65B9D3;
 	font-weight: bold;
+	transition: 2s color 0.1s;
 }
 .FAVideo{
 	position: absolute;
@@ -597,7 +598,7 @@ button{
 }
 .FAVideo.open{
 	
-	margin-top: -100%;
+	margin-top: -150%;
 	width: 83.33%;
 	height: 20.84%;
 	border-radius: 5%;
@@ -612,23 +613,23 @@ button{
 	color: transparent;
 	display: flex;
 	align-items: center;
-	justify-content: center;
+	justify-content: flex-start;
 }
 .FAText.open{
-	margin-left: 50%;
-	margin-top: 0%;
-	width: 50%;
+	margin-left: 8.75%;
+	margin-top: -50%;
+	width: 82.5%;
 	height: 100%;
-	font-size: 3.33rem;
+	font-size: 6rem;
 	color: #ffffff;
 	line-height: 2;
 }
 .Back{
 	position: absolute;
 	z-index: 8;
-	margin-left: 2.6%;
-	margin-top: 1.2%;
-	width: 3.75%;
+	margin-top: 75%;
+	margin-left: 45%;
+	width: 10%;
 	
 	opacity: 0;
 }
@@ -851,7 +852,7 @@ button{
 }
 .view3{
 	position: absolute;
-	z-index: 6;
+	z-index: 5;
 	margin-left: 0%;
 	margin-top: 168%;
 	width: 100%;
