--- a/網頁/WayPage/WayPageAll.m.css
+++ b/網頁/WayPage/WayPageAll.m.css
@@ -694,12 +694,13 @@ button{
 }
 .Life.open{
 	margin-left: 0%;
-	margin-top: -42.5%;
+	margin-top: -210%;
 	width: 100%;
 	height: 5%;
-	font-size: 5.33rem;
-	color: #6A3C04;
+	font-size: 8rem;
+	color: #65B9D3;
 	font-weight: bold;
+	transition: 2s color 0.1s;
 }
 .LAVideo{
 	position: absolute;
@@ -728,14 +729,14 @@ button{
 	color: transparent;
 	display: flex;
 	align-items: center;
-	justify-content: center;
+	justify-content: flex-start;
 }
 .LAText.open{
-	margin-left: 50%;
-	margin-top: 0%;
-	width: 50%;
+	margin-left: 8.75%;
+	margin-top: -50%;
+	width: 82.5%;
 	height: 100%;
-	font-size: 3.33rem;
+	font-size: 6rem;
 	color: #ffffff;
 	line-height: 2;
 }
@@ -803,12 +804,13 @@ button{
 }
 .Happy.open{
 	margin-left: 0%;
-	margin-top: -42.5%;
+	margin-top: -210%;
 	width: 100%;
 	height: 5%;
-	font-size: 5.33rem;
-	color: #5F7622;
+	font-size: 8rem;
+	color: #65B9D3;
 	font-weight: bold;
+	transition: 2s color 0.1s;
 }
 .HAVideo{
 	position: absolute;
@@ -837,14 +839,14 @@ button{
 	color: transparent;
 	display: flex;
 	align-items: center;
-	justify-content: center;
+	justify-content: flex-start;
 }
 .HAText.open{
-	margin-left: 50%;
-	margin-top: 0%;
-	width: 50%;
+	margin-left: 8.75%;
+	margin-top: -50%;
+	width: 82.5%;
 	height: 100%;
-	font-size: 3.33rem;
+	font-size: 6rem;
 	color: #ffffff;
 	line-height: 2;
 }
