--- a/網頁/WayPage/WayPageAll.m.css
+++ b/網頁/WayPage/WayPageAll.m.css
@@ -698,7 +698,7 @@ button{
 	width: 100%;
 	height: 5%;
 	font-size: 8rem;
-	color: #65B9D3;
+	color: #6A3C04;
 	font-weight: bold;
 	transition: 2s color 0.1s;
 }
@@ -791,7 +791,7 @@ button{
 	font-size: 0rem;
 	border-radius: 0%;
 	background-color:  rgba(160,206,101,0.98);
-
+	
 }
 .HATitle.open:hover{
 	color: transparent;
@@ -808,7 +808,7 @@ button{
 	width: 100%;
 	height: 5%;
 	font-size: 8rem;
-	color: #65B9D3;
+	color: #5F7622;
 	font-weight: bold;
 	transition: 2s color 0.1s;
 }
