--- a/網頁/WayPage/WayPageAll.css
+++ b/網頁/WayPage/WayPageAll.css
@@ -527,7 +527,11 @@ button{
 
 
 }
+.FoodAnimation:hover{
+box-shadow: 2px 2px #fff;
 
+
+}
 .FoodAnimation.open{
 	margin-left: 0%;
 	margin-top: 0%;
