--- a/網頁/WayPage/WayPageAll.m.css
+++ b/網頁/WayPage/WayPageAll.m.css
@@ -863,7 +863,7 @@ button{
 	font-size: 2rem;
 }
 
-@media (min-width: 1280px) and (max-width: 1500px){
+@media (min--device-width: 1280px) and (max-width: 1500px){
 	
 	html{
 		font-size: 8px;
@@ -871,14 +871,14 @@ button{
 	
 }
 
-@media (min-width: 960px) and (max-width: 1280px){
+@media (min--device-width: 960px) and (max-width: 1280px){
 	
 	html{
 		font-size: 6px;
 	}
 	
 }
-@media (min-width: 600px) and (max-width: 960px){
+@media (min--device-width: 600px) and (max-width: 960px){
 	
 	
 	html{
@@ -887,7 +887,7 @@ button{
 	
 }
 
-@media (min-width: 376px) and (max-width: 600px){
+@media (min--device-width: 376px) and (max-width: 600px){
 	
 	
 	html{
@@ -973,7 +973,7 @@ button{
 	
 }
 
-@media (min-width: 100px) and (max-width: 375px){
+@media (min--device-width: 100px) and (max-width: 375px){
 	
 	html{
 		font-size: 1px;
