--- a/網頁/WayPage/WayPageAll.css
+++ b/網頁/WayPage/WayPageAll.css
@@ -958,7 +958,7 @@ button{
 	font-size: 2rem;
 }
 
-@media (min-device-width: 1280px) and (max-width: 1500px){
+@media (min-device-width: 1280px) and (max-device-width: 1500px){
 	
 	html{
 		font-size: 8px;
@@ -966,14 +966,14 @@ button{
 	
 }
 
-@media (min-device-width: 960px) and (max-width: 1280px){
+@media (min-device-width: 960px) and (max-device-width: 1280px){
 	
 	html{
 		font-size: 6px;
 	}
 	
 }
-@media (min-device-width: 600px) and (max-width: 960px){
+@media (min-device-width: 600px) and (max-device-width: 960px){
 	
 	
 	html{
@@ -983,7 +983,7 @@ button{
 	
 }
 
-@media (min-device-width: 376px) and (max-width: 600px){
+@media (min-device-width: 376px) and (max-device-width: 600px){
 	
 	
 	html{
@@ -1087,7 +1087,7 @@ button{
 	
 }
 
-@media (min-device-width: 100px) and (max-width: 375px){
+@media (min-device-width: 100px) and (max-device-width: 375px){
 	
 	html{
 		font-size: 1px;
