--- a/網頁/MonitorPage/MonitorPage.css
+++ b/網頁/MonitorPage/MonitorPage.css
@@ -310,6 +310,8 @@ button{
 	position: absolute;
 	margin-left: 0%;
 	margin-top: 0%;
+	width: 100%;
+	height: 100%;
 	transition: 1s;
 }
 .P1-1.left{
@@ -346,7 +348,6 @@ button{
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	
 	
 }
 .P1-1Arrow:hover{
