--- a/網頁/MonitorPage/MonitorPage.css
+++ b/網頁/MonitorPage/MonitorPage.css
@@ -719,44 +719,195 @@ button{
 	
 }
 
-@media (min-width: 1280px) and (max-width: 1500px){
+@media (min-device-width: 1280px) and (max-device-width: 1500px){
 	
 	html{
-		font-size: 8px;
+		font-size: 9px;
 	}
 	
 }
 
-@media (min-width: 960px) and (max-width: 1280px){
+@media (min-device-width: 960px) and (max-device-width: 1280px){
+	
+	html{
+		font-size: 7px;
+	}
+	
+}
+@media (min-device-width: 600px) and (max-device-width: 960px){
+	
+	
+	html{
+		font-size: 7px;
+	}
+	
+}
+
+@media (min-device-width: 376px) and (max-device-width: 600px){
+	
 	
 	html{
 		font-size: 6px;
 	}
-	
-}
-@media (min-width: 600px) and (max-width: 960px){
-	
-	
-	html{
-		font-size: 4px;
+	.myBtn {
+  	
+		margin-top: 4%; /* Place the button at the bottom of the page */
+		margin-left: 90%; /* Place the button 30px from the right */
+		width: 8%;
+		padding-bottom: 8%;
+		border-radius: 50%;
+  	
 	}
+	.AllCross{
+		
+		width: 8%;
+		padding-bottom: 8%;
+		margin-left: 90%;
+		margin-top: 4%;
+
+	}
+	.Cross1{	
+		margin-top: 2.8%;
+		margin-left: 2%;
+		width: 4%;
+		padding-bottom: 0.5%;
 	
+	}
+	.Cross1.open{
+		margin-top: 3.8%;
+		transform: rotate(45deg);
+	}
+	.Cross2{
+		
+		margin-top: 3.8%;
+		margin-left: 2%;
+		width: 4%;
+		padding-bottom: 0.5%;
+		
+	}
+	.Cross2.open{
+		opacity: 0;
+	}
+	.Cross3{
+		
+		margin-top: 4.8%;
+		margin-left: 2%;
+		width: 4%;
+		padding-bottom: 0.5%;
+		
+	}
+	.Cross3.open{
+		margin-top: 3.8%;
+		transform: rotate(-45deg);
+	}
+	.MenuContent{
+		
+		margin-top: 15%;
+		
+	}
+	.MenuBtn{
+		font-size: 12rem;
+	}
+	.Ab{
+		font-size: 10rem;
+	}
+	.l-earth{
+		position: absolute;
+		top: 40%;
+		width: 20%;
+		}
+	.l-word {
+		position: absolute;
+		top: 55%;
+		font-size: 28px;
+		letter-spacing: 12px;
+		text-align: center;
+
+	}
 	
 }
 
-@media (min-width: 376px) and (max-width: 600px){
-	
+@media (min-device-width: 100px) and (max-device-width: 375px){
 	
 	html{
-		font-size: 2px;
+		font-size: 5px;
 	}
 	
-}
+	.myBtn {
+  	
+		margin-top: 4%; /* Place the button at the bottom of the page */
+		margin-left: 90%; /* Place the button 30px from the right */
+		width: 8%;
+		padding-bottom: 8%;
+		border-radius: 50%;
+  	
+	}
+	.AllCross{
+		
+		width: 8%;
+		padding-bottom: 8%;
+		margin-left: 90%;
+		margin-top: 4%;
 
-@media (min-width: 100px) and (max-width: 375px){
-	
-	html{
-		font-size: 1px;
 	}
+	.Cross1{	
+		margin-top: 2.8%;
+		margin-left: 2%;
+		width: 4%;
+		padding-bottom: 0.5%;
 	
+		
+
+	}
+	.Cross1.open{
+		margin-top: 3.8%;
+		transform: rotate(45deg);
+	}
+	.Cross2{
+		
+		margin-top: 3.8%;
+		margin-left: 2%;
+		width: 4%;
+		padding-bottom: 0.5%;
+		
+	}
+	.Cross2.open{
+		opacity: 0;
+	}
+	.Cross3{
+		
+		margin-top: 4.8%;
+		margin-left: 2%;
+		width: 4%;
+		padding-bottom: 0.5%;
+		
+	}
+	.Cross3.open{
+		margin-top: 3.8%;
+		transform: rotate(-45deg);
+	}
+	.MenuContent{
+		
+		margin-top: 15%;
+		
+	}
+	.MenuBtn{
+		font-size: 14rem;
+	}
+	.Ab{
+		font-size: 12rem;
+	}
+	.l-earth{
+		position: absolute;
+		top: 40%;
+		width: 20%;
+		}
+	.l-word {
+		position: absolute;
+		top: 55%;
+		font-size: 28px;
+		letter-spacing: 12px;
+		text-align: center;
+
+	}
 }
