--- a/網頁/MonitorPage/MonitorPage.css
+++ b/網頁/MonitorPage/MonitorPage.css
@@ -223,7 +223,7 @@ button{
 	position: absolute;
 	z-index: 1;
 	width: 100%;
-	padding-bottom: 56%;
+	height: 100%;
 	margin-left: 0%;
 	margin-top: 0%;
 	
