--- a/網頁/AboutUsPage/AboutUsPage.css
+++ b/網頁/AboutUsPage/AboutUsPage.css
@@ -399,7 +399,7 @@ button{
 	margin-top: 90%;
 	font-size: 3.33rem;
 	color: #00627E;
-	font-Guanght: bold;
+	font-weight: bold;
 }
 
 .GuanLine{
@@ -440,7 +440,7 @@ button{
 	margin-top: 90%;
 	font-size: 3.33rem;
 	color: #00627E;
-	font-Changght: bold;
+	font-weight: bold;
 }
 
 .ChangLine{
@@ -482,7 +482,7 @@ button{
 	margin-top: 90%;
 	font-size: 3.33rem;
 	color: #00627E;
-	font-Tsengght: bold;
+	font-weight: bold;
 }
 
 .TsengLine{
