--- a/網頁/AboutUsPage/AboutUsPage.css
+++ b/網頁/AboutUsPage/AboutUsPage.css
@@ -100,7 +100,7 @@ body{
 	padding-bottom: 0.25%;
 	border-radius: 3px 3px 3px 3px;
 	background-color: #296177;
-	box-shadow: 0px 3px 6px #00000029;
+	box-shadow: 0px 3px 6px #000029;
 	transition: 0.5s; 
 
 }
@@ -116,7 +116,7 @@ body{
 	padding-bottom: 0.25%;
 	border-radius: 3px 3px 3px 3px;
 	background-color: #296177;
-	box-shadow: 0px 3px 6px #00000029;
+	box-shadow: 0px 3px 6px #000029;
 	transition: 0.5s; 
 }
 .Cross2.open{
@@ -130,7 +130,7 @@ body{
 	padding-bottom: 0.25%;
 	border-radius: 3px 3px 3px 3px;
 	background-color: #296177;
-	box-shadow: 0px 3px 6px #00000029;
+	box-shadow: 0px 3px 6px #000029;
 	transition: 0.5s; 
 }
 .Cross3.open{
