--- a/網頁/AboutUsPage/AboutUsPage.css
+++ b/網頁/AboutUsPage/AboutUsPage.css
@@ -619,8 +619,17 @@ button{
 		text-align: center;
 
 	}
+	.P1Title{
+		margin-left: 20.04%;
+	}
 	.P1Content{
+		margin-left: 40.35%;
+		margin-top: 34%;
+		width: 37.25%;
+		height: 55.56%;
 		font-size: 2.8rem;
+		color: #001820;	
+		line-height: 1.2;
 	}
 	
 }
@@ -711,7 +720,16 @@ button{
 		text-align: center;
 
 	}
+	.P1Title{
+		margin-left: 20.04%;
+	}
 	.P1Content{
+		margin-left: 40.35%;
+		margin-top: 34%;
+		width: 37.25%;
+		height: 55.56%;
 		font-size: 2.6rem;
+		color: #001820;	
+		line-height: 1.2;
 	}
 }
