--- a/網頁/AboutUsPage/AboutUsPage.css
+++ b/網頁/AboutUsPage/AboutUsPage.css
@@ -622,6 +622,9 @@ button{
 	.P1Title{
 		margin-left: 20.04%;
 	}
+	.P1MidLine{
+		margin-left: 37.75%;
+	}
 	.P1Content{
 		margin-left: 40.35%;
 		margin-top: 34%;
@@ -722,6 +725,9 @@ button{
 	}
 	.P1Title{
 		margin-left: 20.04%;
+	}
+	.P1MidLine{
+		margin-left: 37.75%;
 	}
 	.P1Content{
 		margin-left: 40.35%;
