--- a/網頁/AboutUsPage/AboutUsPage.css
+++ b/網頁/AboutUsPage/AboutUsPage.css
@@ -621,9 +621,11 @@ button{
 	}
 	.P1Title{
 		margin-left: 20.04%;
+		margin-top: 27.5%;
 	}
 	.P1MidLine{
 		margin-left: 37.75%;
+		margin-top: 35.75%;
 	}
 	.P1Content{
 		margin-left: 40.35%;
@@ -725,9 +727,11 @@ button{
 	}
 	.P1Title{
 		margin-left: 20.04%;
+		margin-top: 27.5%;
 	}
 	.P1MidLine{
 		margin-left: 37.75%;
+		margin-top: 35.75%;
 	}
 	.P1Content{
 		margin-left: 40.35%;
