--- a/網頁/AboutUsPage/AboutUsPage.m.css
+++ b/網頁/AboutUsPage/AboutUsPage.m.css
@@ -345,7 +345,7 @@ button{
 	position: absolute;
 	z-index: 1;
 	margin-left: 13.54%;
-	margin-top: 43;
+	margin-top: 43%;
 	width: 13.03%;
 	height: 40.3%;
 	display: flex;
