--- a/網頁/AboutUsPage/AboutUsPage.m.css
+++ b/網頁/AboutUsPage/AboutUsPage.m.css
@@ -716,5 +716,16 @@ button{
 		margin-top: 32.5%;
 		font-size: 3.5rem;
 	}
-	
+	.WeiLine{
+		margin-top: 135%;
+	}
+	.GuanLine{
+		margin-top: 135%;
+	}
+	.ChangLine{
+		margin-top: 135%;
+	}
+	.TsengLine{
+		margin-top: 135%;
+	}
 }
